Real Backup virtuell geladen

--- a/Virtual Controller/v6700-127534_BACKUP/SYSPAR/EIO.cfg
+++ b/Virtual Controller/v6700-127534_BACKUP/SYSPAR/EIO.cfg
@@ -33,7 +33,7 @@ PROFINET_DEVICE:
 EIO_SIGNAL:
 
       -Name "Ausgang_100_0" -SignalType "DO" -Device "Device" -DeviceMap "0"\
-      -Size 1
+      -Access "All" -Size 1
 
       -Name "Ausgang_100_1" -SignalType "DO" -Device "Device" -DeviceMap "1"\
       -Size 1
