--- a/Virtual Controller/v6700-127534_BACKUP/SYSPAR/MOC.cfg
+++ b/Virtual Controller/v6700-127534_BACKUP/SYSPAR/MOC.cfg
@@ -140,8 +140,8 @@ MOTION_SUP:
 
       -name "default"
 
-      -name "rob1" -path_col_detect_on  -jog_col_detect_on \
-      -gravity_tolerance 0.2 -friction_tolerance 1 -disturbance_tolerance 0.2
+      -name "rob1" -gravity_tolerance 0.2 -friction_tolerance 1\
+      -disturbance_tolerance 0.2
 #
 SINGLE:
 
@@ -379,7 +379,7 @@ MOTOR_CALIB:
       -name "rob1_6" -valid_com_offset  -cal_offset 0.5336 -valid_cal_offset \
       -factory_calibration_method 3 -latest_calibration_method 3
 
-      -name "TMF3" -valid_com_offset  -cal_offset 1.6948 -valid_cal_offset \
+      -name "TMF3" -valid_com_offset  -cal_offset 4.6438 -valid_cal_offset \
       -latest_calibration_method 1
 #
 THERMAL_DUTY_CYCLE:
