--- a/Virtual Controller/v6700-127534_BACKUP/SYSPAR/SYS.cfg
+++ b/Virtual Controller/v6700-127534_BACKUP/SYSPAR/SYS.cfg
@@ -2,7 +2,7 @@ SYS:CFG_1.0:6:0::
 #
 LOCALIZATION:
 
-      -Name "Language" -Value "de"
+      -Name "Language" -Value "en"
 #
 CAB_REGAIN_DIST:
 
@@ -33,7 +33,7 @@ RUNCHN_BOOL:
 #
 AUTO_COND_RESET:
 
-      -name "AllDebugSettings" -reset "NO"
+      -name "AllDebugSettings" -reset "No"
 #
 CAB_TASK_MODULES:
 
@@ -52,7 +52,7 @@ SYS_MISC:
 
       -Name "NoOfRetry" -Value 4
 
-      -Name "SimulateMenu" -Value 1
+      -Name "SimulateMenu"
 
       -Name "ModalPayLoadMode" -Value 1
 
